# raven

./: .gitignore  LICENSE  README.md
backend/: .ruff.toml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: auth.py  dependencies.py  orders.py  rounds.py  routers.py  sneaker_model.py  sneaker_variant.py  users.py
backend/src/core/: exceptions.py
backend/src/core/config/: config.py
backend/src/core/dependencies/: __init__.py  database.py  security.py  services.py  use_cases.py
backend/src/core/security/: dependencies.py
backend/src/core/utils/: email.py  password.py  repository.py  token.py
backend/src/db/models/: __init__.py  bets.py  orders.py  rounds.py  sneakers.py  users.py
backend/src/db/session/: database.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 03a2d43c6752_add_users_table.py  06235344fd44_add_sneakermodel_sneakervariant_tables.py  101f3ee0ebdb_add_sneakermodel_sneakervariant_tables.py  227a679800bf_add_sneakermodel_sneakervariant_tables.py  3cde6a7d72ef_add_users_table.py  554aea3ade70_delete_float_precision_from_sqlalchemy_.py  (+6 more)
backend/src/repositories/: order.py  order_item.py  rounds.py  sneaker_model.py  sneaker_variant.py  sneakers.py  users.py
backend/src/schemas/: auth.py  sneaker_model.py  sneaker_variant.py  use_cases.py  users.py
backend/src/services/: auth.py  email.py  jwt.py  order_items.py  orders.py  rounds.py  security.py  sneaker_model.py  sneaker_variant.py  users.py
backend/src/use_cases/: __init__.py  base.py
(+55 files in other folders)
